@@ -60,6 +60,7 @@ bzr-0.0.5  NOT RELEASED YET
 
     * bzrlib.open_tracefile() takes a tracefilename parameter.
 
+    * New AtomicFile class.
 bzr-0.0.4  2005-04-22
 
   ENHANCEMENTS:
